Chapter 4/y.output
   0  $accept : program $end

   1  decs : dec decs
   2       |

   3  dec : tydec
   4      | vardec
   5      | fundec

   6  tydec : TYPE build_in_type EQUAL_SIGN ID
   7        | TYPE ID EQUAL_SIGN ID
   8        | TYPE build_in_type EQUAL_SIGN ty
   9        | TYPE ID EQUAL_SIGN ty

  10  build_in_type : INT
  11                | STRING

  12  ty : build_in_type
  13     | LEFT_CURLY_BRACE tyfields RIGHT_CURLY_BRACE
  14     | ARRAY OF build_in_type
  15     | ARRAY OF ID

  16  tyfields : ID COLON build_in_type tyfields_aux
  17           | ID COLON ID tyfields_aux
  18           |

  19  tyfields_aux : COMMA ID COLON build_in_type tyfields_aux
  20               | COMMA ID COLON ID tyfields_aux
  21               |

  22  vardec : VAR ID ASSIGNMENT_SIGN exp
  23         | VAR ID COLON build_in_type ASSIGNMENT_SIGN exp
  24         | VAR ID COLON ID ASSIGNMENT_SIGN exp

  25  fundec : FUNCTION ID LEFT_PARENTHESIS tyfields RIGHT_PARENTHESIS EQUAL_SIGN exp
  26         | FUNCTION ID LEFT_PARENTHESIS tyfields RIGHT_PARENTHESIS COLON build_in_type EQUAL_SIGN exp
  27         | FUNCTION ID LEFT_PARENTHESIS tyfields RIGHT_PARENTHESIS COLON ID EQUAL_SIGN exp

  28  l_value : ID l_value_aux

  29  l_value_aux : DOT ID l_value_aux
  30              | LEFT_BRACKET exp RIGHT_BRACKET l_value_aux
  31              |

  32  function_call : ID LEFT_PARENTHESIS RIGHT_PARENTHESIS
  33                | ID LEFT_PARENTHESIS exp function_call_aux RIGHT_PARENTHESIS

  34  function_call_aux : COMMA exp function_call_aux
  35                    |

  36  nil : NIL

  37  integer_literal : INTEGER_LITERAL

  38  string_literal : STRING_LITERAL

  39  array_creation : build_in_type LEFT_BRACKET exp RIGHT_BRACKET OF exp
  40                 | ID LEFT_BRACKET exp RIGHT_BRACKET OF exp

  41  record_creation : build_in_type LEFT_CURLY_BRACE ID EQUAL_SIGN exp record_creation_aux RIGHT_CURLY_BRACE
  42                  | ID LEFT_CURLY_BRACE ID EQUAL_SIGN exp record_creation_aux RIGHT_CURLY_BRACE
  43                  | build_in_type LEFT_CURLY_BRACE RIGHT_CURLY_BRACE
  44                  | ID LEFT_CURLY_BRACE RIGHT_CURLY_BRACE

  45  record_creation_aux : COMMA ID EQUAL_SIGN exp record_creation_aux
  46                      |

  47  arithmetic : exp ADD_SIGN exp
  48             | exp MINUS_SIGN exp
  49             | exp MULTIPLY_SIGN exp
  50             | exp DIVIDE_SIGN exp

  51  parentheses : LEFT_PARENTHESIS exp RIGHT_PARENTHESIS

  52  no_value : LEFT_PARENTHESIS RIGHT_PARENTHESIS

  53  sequencing : LEFT_PARENTHESIS exp SEMICOLON exp sequencing_aux RIGHT_PARENTHESIS

  54  sequencing_aux : SEMICOLON exp sequencing_aux
  55                 |

  56  for : FOR ID ASSIGNMENT_SIGN exp TO exp DO exp

  57  if_then_else : IF exp THEN exp ELSE exp

  58  if_then : IF exp THEN exp

  59  comparison : exp EQUAL_SIGN exp
  60             | exp NOT_EQUAL_SIGN exp
  61             | exp LESS_SIGN exp
  62             | exp LESS_EQUAL_SIGN exp
  63             | exp GREATER_SIGN exp
  64             | exp GREATER_EQUAL_SIGN exp

  65  boolean_operate : exp LOGICAL_AND exp
  66                  | exp LOGICAL_OR exp

  67  assignment : l_value ASSIGNMENT_SIGN exp

  68  let : LET decs IN expseq END

  69  expseq : exp let_aux
  70         |

  71  let_aux : SEMICOLON exp let_aux
  72          |

  73  while : WHILE exp DO exp

  74  negation : MINUS_SIGN exp

  75  break : BREAK

  76  exp : l_value
  77      | function_call
  78      | nil
  79      | integer_literal
  80      | string_literal
  81      | array_creation
  82      | record_creation
  83      | arithmetic
  84      | parentheses
  85      | no_value
  86      | sequencing
  87      | for
  88      | if_then_else
  89      | if_then
  90      | comparison
  91      | boolean_operate
  92      | assignment
  93      | let
  94      | while
  95      | negation
  96      | break

  97  program : exp

state 0
	$accept : . program $end  (0)

	INTEGER_LITERAL  shift 1
	ID  shift 2
	STRING_LITERAL  shift 3
	INT  shift 4
	STRING  shift 5
	NIL  shift 6
	LET  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	BREAK  shift 11
	LEFT_PARENTHESIS  shift 12
	MINUS_SIGN  shift 13
	.  error

	program  goto 14
	exp  goto 15
	build_in_type  goto 16
	l_value  goto 17
	function_call  goto 18
	nil  goto 19
	integer_literal  goto 20
	string_literal  goto 21
	array_creation  goto 22
	record_creation  goto 23
	arithmetic  goto 24
	parentheses  goto 25
	no_value  goto 26
	sequencing  goto 27
	for  goto 28
	if_then_else  goto 29
	if_then  goto 30
	comparison  goto 31
	boolean_operate  goto 32
	assignment  goto 33
	let  goto 34
	while  goto 35
	negation  goto 36
	break  goto 37


state 1
	integer_literal : INTEGER_LITERAL .  (37)

	.  reduce 37


state 2
	l_value : ID . l_value_aux  (28)
	function_call : ID . LEFT_PARENTHESIS RIGHT_PARENTHESIS  (32)
	function_call : ID . LEFT_PARENTHESIS exp function_call_aux RIGHT_PARENTHESIS  (33)
	array_creation : ID . LEFT_BRACKET exp RIGHT_BRACKET OF exp  (40)
	record_creation : ID . LEFT_CURLY_BRACE ID EQUAL_SIGN exp record_creation_aux RIGHT_CURLY_BRACE  (42)
	record_creation : ID . LEFT_CURLY_BRACE RIGHT_CURLY_BRACE  (44)
	l_value_aux : .  (31)

	LEFT_CURLY_BRACE  shift 38
	LEFT_PARENTHESIS  shift 39
	DOT  shift 40
	LEFT_BRACKET  shift 41
	$end  reduce 31
	TYPE  reduce 31
	VAR  reduce 31
	FUNCTION  reduce 31
	IN  reduce 31
	END  reduce 31
	THEN  reduce 31
	ELSE  reduce 31
	DO  reduce 31
	TO  reduce 31
	RIGHT_CURLY_BRACE  reduce 31
	COMMA  reduce 31
	RIGHT_PARENTHESIS  reduce 31
	SEMICOLON  reduce 31
	RIGHT_BRACKET  reduce 31
	ASSIGNMENT_SIGN  reduce 31
	LOGICAL_AND  reduce 31
	LOGICAL_OR  reduce 31
	EQUAL_SIGN  reduce 31
	NOT_EQUAL_SIGN  reduce 31
	LESS_SIGN  reduce 31
	GREATER_SIGN  reduce 31
	LESS_EQUAL_SIGN  reduce 31
	GREATER_EQUAL_SIGN  reduce 31
	ADD_SIGN  reduce 31
	MINUS_SIGN  reduce 31
	MULTIPLY_SIGN  reduce 31
	DIVIDE_SIGN  reduce 31

	l_value_aux  goto 42


state 3
	string_literal : STRING_LITERAL .  (38)

	.  reduce 38


state 4
	build_in_type : INT .  (10)

	.  reduce 10


state 5
	build_in_type : STRING .  (11)

	.  reduce 11


state 6
	nil : NIL .  (36)

	.  reduce 36


state 7
	let : LET . decs IN expseq END  (68)
	decs : .  (2)

	TYPE  shift 43
	VAR  shift 44
	FUNCTION  shift 45
	IN  reduce 2

	decs  goto 46
	dec  goto 47
	tydec  goto 48
	vardec  goto 49
	fundec  goto 50


state 8
	if_then_else : IF . exp THEN exp ELSE exp  (57)
	if_then : IF . exp THEN exp  (58)

	INTEGER_LITERAL  shift 1
	ID  shift 2
	STRING_LITERAL  shift 3
	INT  shift 4
	STRING  shift 5
	NIL  shift 6
	LET  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	BREAK  shift 11
	LEFT_PARENTHESIS  shift 12
	MINUS_SIGN  shift 13
	.  error

	exp  goto 51
	build_in_type  goto 16
	l_value  goto 17
	function_call  goto 18
	nil  goto 19
	integer_literal  goto 20
	string_literal  goto 21
	array_creation  goto 22
	record_creation  goto 23
	arithmetic  goto 24
	parentheses  goto 25
	no_value  goto 26
	sequencing  goto 27
	for  goto 28
	if_then_else  goto 29
	if_then  goto 30
	comparison  goto 31
	boolean_operate  goto 32
	assignment  goto 33
	let  goto 34
	while  goto 35
	negation  goto 36
	break  goto 37


state 9
	while : WHILE . exp DO exp  (73)

	INTEGER_LITERAL  shift 1
	ID  shift 2
	STRING_LITERAL  shift 3
	INT  shift 4
	STRING  shift 5
	NIL  shift 6
	LET  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	BREAK  shift 11
	LEFT_PARENTHESIS  shift 12
	MINUS_SIGN  shift 13
	.  error

	exp  goto 52
	build_in_type  goto 16
	l_value  goto 17
	function_call  goto 18
	nil  goto 19
	integer_literal  goto 20
	string_literal  goto 21
	array_creation  goto 22
	record_creation  goto 23
	arithmetic  goto 24
	parentheses  goto 25
	no_value  goto 26
	sequencing  goto 27
	for  goto 28
	if_then_else  goto 29
	if_then  goto 30
	comparison  goto 31
	boolean_operate  goto 32
	assignment  goto 33
	let  goto 34
	while  goto 35
	negation  goto 36
	break  goto 37


state 10
	for : FOR . ID ASSIGNMENT_SIGN exp TO exp DO exp  (56)

	ID  shift 53
	.  error


state 11
	break : BREAK .  (75)

	.  reduce 75


state 12
	parentheses : LEFT_PARENTHESIS . exp RIGHT_PARENTHESIS  (51)
	no_value : LEFT_PARENTHESIS . RIGHT_PARENTHESIS  (52)
	sequencing : LEFT_PARENTHESIS . exp SEMICOLON exp sequencing_aux RIGHT_PARENTHESIS  (53)

	INTEGER_LITERAL  shift 1
	ID  shift 2
	STRING_LITERAL  shift 3
	INT  shift 4
	STRING  shift 5
	NIL  shift 6
	LET  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	BREAK  shift 11
	LEFT_PARENTHESIS  shift 12
	RIGHT_PARENTHESIS  shift 54
	MINUS_SIGN  shift 13
	.  error

	exp  goto 55
	build_in_type  goto 16
	l_value  goto 17
	function_call  goto 18
	nil  goto 19
	integer_literal  goto 20
	string_literal  goto 21
	array_creation  goto 22
	record_creation  goto 23
	arithmetic  goto 24
	parentheses  goto 25
	no_value  goto 26
	sequencing  goto 27
	for  goto 28
	if_then_else  goto 29
	if_then  goto 30
	comparison  goto 31
	boolean_operate  goto 32
	assignment  goto 33
	let  goto 34
	while  goto 35
	negation  goto 36
	break  goto 37


state 13
	negation : MINUS_SIGN . exp  (74)

	INTEGER_LITERAL  shift 1
	ID  shift 2
	STRING_LITERAL  shift 3
	INT  shift 4
	STRING  shift 5
	NIL  shift 6
	LET  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	BREAK  shift 11
	LEFT_PARENTHESIS  shift 12
	MINUS_SIGN  shift 13
	.  error

	exp  goto 56
	build_in_type  goto 16
	l_value  goto 17
	function_call  goto 18
	nil  goto 19
	integer_literal  goto 20
	string_literal  goto 21
	array_creation  goto 22
	record_creation  goto 23
	arithmetic  goto 24
	parentheses  goto 25
	no_value  goto 26
	sequencing  goto 27
	for  goto 28
	if_then_else  goto 29
	if_then  goto 30
	comparison  goto 31
	boolean_operate  goto 32
	assignment  goto 33
	let  goto 34
	while  goto 35
	negation  goto 36
	break  goto 37


state 14
	$accept : program . $end  (0)

	$end  accept


state 15
	arithmetic : exp . ADD_SIGN exp  (47)
	arithmetic : exp . MINUS_SIGN exp  (48)
	arithmetic : exp . MULTIPLY_SIGN exp  (49)
	arithmetic : exp . DIVIDE_SIGN exp  (50)
	comparison : exp . EQUAL_SIGN exp  (59)
	comparison : exp . NOT_EQUAL_SIGN exp  (60)
	comparison : exp . LESS_SIGN exp  (61)
	comparison : exp . LESS_EQUAL_SIGN exp  (62)
	comparison : exp . GREATER_SIGN exp  (63)
	comparison : exp . GREATER_EQUAL_SIGN exp  (64)
	boolean_operate : exp . LOGICAL_AND exp  (65)
	boolean_operate : exp . LOGICAL_OR exp  (66)
	program : exp .  (97)

	LOGICAL_AND  shift 57
	LOGICAL_OR  shift 58
	EQUAL_SIGN  shift 59
	NOT_EQUAL_SIGN  shift 60
	LESS_SIGN  shift 61
	GREATER_SIGN  shift 62
	LESS_EQUAL_SIGN  shift 63
	GREATER_EQUAL_SIGN  shift 64
	ADD_SIGN  shift 65
	MINUS_SIGN  shift 66
	MULTIPLY_SIGN  shift 67
	DIVIDE_SIGN  shift 68
	$end  reduce 97


state 16
	array_creation : build_in_type . LEFT_BRACKET exp RIGHT_BRACKET OF exp  (39)
	record_creation : build_in_type . LEFT_CURLY_BRACE ID EQUAL_SIGN exp record_creation_aux RIGHT_CURLY_BRACE  (41)
	record_creation : build_in_type . LEFT_CURLY_BRACE RIGHT_CURLY_BRACE  (43)

	LEFT_CURLY_BRACE  shift 69
	LEFT_BRACKET  shift 70
	.  error


state 17
	assignment : l_value . ASSIGNMENT_SIGN exp  (67)
	exp : l_value .  (76)

	ASSIGNMENT_SIGN  shift 71
	$end  reduce 76
	TYPE  reduce 76
	VAR  reduce 76
	FUNCTION  reduce 76
	IN  reduce 76
	END  reduce 76
	THEN  reduce 76
	ELSE  reduce 76
	DO  reduce 76
	TO  reduce 76
	RIGHT_CURLY_BRACE  reduce 76
	COMMA  reduce 76
	RIGHT_PARENTHESIS  reduce 76
	SEMICOLON  reduce 76
	RIGHT_BRACKET  reduce 76
	LOGICAL_AND  reduce 76
	LOGICAL_OR  reduce 76
	EQUAL_SIGN  reduce 76
	NOT_EQUAL_SIGN  reduce 76
	LESS_SIGN  reduce 76
	GREATER_SIGN  reduce 76
	LESS_EQUAL_SIGN  reduce 76
	GREATER_EQUAL_SIGN  reduce 76
	ADD_SIGN  reduce 76
	MINUS_SIGN  reduce 76
	MULTIPLY_SIGN  reduce 76
	DIVIDE_SIGN  reduce 76


state 18
	exp : function_call .  (77)

	.  reduce 77


state 19
	exp : nil .  (78)

	.  reduce 78


state 20
	exp : integer_literal .  (79)

	.  reduce 79


state 21
	exp : string_literal .  (80)

	.  reduce 80


state 22
	exp : array_creation .  (81)

	.  reduce 81


state 23
	exp : record_creation .  (82)

	.  reduce 82


state 24
	exp : arithmetic .  (83)

	.  reduce 83


state 25
	exp : parentheses .  (84)

	.  reduce 84


state 26
	exp : no_value .  (85)

	.  reduce 85


state 27
	exp : sequencing .  (86)

	.  reduce 86


state 28
	exp : for .  (87)

	.  reduce 87


state 29
	exp : if_then_else .  (88)

	.  reduce 88


state 30
	exp : if_then .  (89)

	.  reduce 89


state 31
	exp : comparison .  (90)

	.  reduce 90


state 32
	exp : boolean_operate .  (91)

	.  reduce 91


state 33
	exp : assignment .  (92)

	.  reduce 92


state 34
	exp : let .  (93)

	.  reduce 93


state 35
	exp : while .  (94)

	.  reduce 94


state 36
	exp : negation .  (95)

	.  reduce 95


state 37
	exp : break .  (96)

	.  reduce 96


state 38
	record_creation : ID LEFT_CURLY_BRACE . ID EQUAL_SIGN exp record_creation_aux RIGHT_CURLY_BRACE  (42)
	record_creation : ID LEFT_CURLY_BRACE . RIGHT_CURLY_BRACE  (44)

	ID  shift 72
	RIGHT_CURLY_BRACE  shift 73
	.  error


state 39
	function_call : ID LEFT_PARENTHESIS . RIGHT_PARENTHESIS  (32)
	function_call : ID LEFT_PARENTHESIS . exp function_call_aux RIGHT_PARENTHESIS  (33)

	INTEGER_LITERAL  shift 1
	ID  shift 2
	STRING_LITERAL  shift 3
	INT  shift 4
	STRING  shift 5
	NIL  shift 6
	LET  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	BREAK  shift 11
	LEFT_PARENTHESIS  shift 12
	RIGHT_PARENTHESIS  shift 74
	MINUS_SIGN  shift 13
	.  error

	exp  goto 75
	build_in_type  goto 16
	l_value  goto 17
	function_call  goto 18
	nil  goto 19
	integer_literal  goto 20
	string_literal  goto 21
	array_creation  goto 22
	record_creation  goto 23
	arithmetic  goto 24
	parentheses  goto 25
	no_value  goto 26
	sequencing  goto 27
	for  goto 28
	if_then_else  goto 29
	if_then  goto 30
	comparison  goto 31
	boolean_operate  goto 32
	assignment  goto 33
	let  goto 34
	while  goto 35
	negation  goto 36
	break  goto 37


state 40
	l_value_aux : DOT . ID l_value_aux  (29)

	ID  shift 76
	.  error


state 41
	l_value_aux : LEFT_BRACKET . exp RIGHT_BRACKET l_value_aux  (30)
	array_creation : ID LEFT_BRACKET . exp RIGHT_BRACKET OF exp  (40)

	INTEGER_LITERAL  shift 1
	ID  shift 2
	STRING_LITERAL  shift 3
	INT  shift 4
	STRING  shift 5
	NIL  shift 6
	LET  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	BREAK  shift 11
	LEFT_PARENTHESIS  shift 12
	MINUS_SIGN  shift 13
	.  error

	exp  goto 77
	build_in_type  goto 16
	l_value  goto 17
	function_call  goto 18
	nil  goto 19
	integer_literal  goto 20
	string_literal  goto 21
	array_creation  goto 22
	record_creation  goto 23
	arithmetic  goto 24
	parentheses  goto 25
	no_value  goto 26
	sequencing  goto 27
	for  goto 28
	if_then_else  goto 29
	if_then  goto 30
	comparison  goto 31
	boolean_operate  goto 32
	assignment  goto 33
	let  goto 34
	while  goto 35
	negation  goto 36
	break  goto 37


state 42
	l_value : ID l_value_aux .  (28)

	.  reduce 28


state 43
	tydec : TYPE . build_in_type EQUAL_SIGN ID  (6)
	tydec : TYPE . ID EQUAL_SIGN ID  (7)
	tydec : TYPE . build_in_type EQUAL_SIGN ty  (8)
	tydec : TYPE . ID EQUAL_SIGN ty  (9)

	ID  shift 78
	INT  shift 4
	STRING  shift 5
	.  error

	build_in_type  goto 79


state 44
	vardec : VAR . ID ASSIGNMENT_SIGN exp  (22)
	vardec : VAR . ID COLON build_in_type ASSIGNMENT_SIGN exp  (23)
	vardec : VAR . ID COLON ID ASSIGNMENT_SIGN exp  (24)

	ID  shift 80
	.  error


state 45
	fundec : FUNCTION . ID LEFT_PARENTHESIS tyfields RIGHT_PARENTHESIS EQUAL_SIGN exp  (25)
	fundec : FUNCTION . ID LEFT_PARENTHESIS tyfields RIGHT_PARENTHESIS COLON build_in_type EQUAL_SIGN exp  (26)
	fundec : FUNCTION . ID LEFT_PARENTHESIS tyfields RIGHT_PARENTHESIS COLON ID EQUAL_SIGN exp  (27)

	ID  shift 81
	.  error


state 46
	let : LET decs . IN expseq END  (68)

	IN  shift 82
	.  error


state 47
	decs : dec . decs  (1)
	decs : .  (2)

	TYPE  shift 43
	VAR  shift 44
	FUNCTION  shift 45
	IN  reduce 2

	decs  goto 83
	dec  goto 47
	tydec  goto 48
	vardec  goto 49
	fundec  goto 50


state 48
	dec : tydec .  (3)

	.  reduce 3


state 49
	dec : vardec .  (4)

	.  reduce 4


state 50
	dec : fundec .  (5)

	.  reduce 5


state 51
	arithmetic : exp . ADD_SIGN exp  (47)
	arithmetic : exp . MINUS_SIGN exp  (48)
	arithmetic : exp . MULTIPLY_SIGN exp  (49)
	arithmetic : exp . DIVIDE_SIGN exp  (50)
	if_then_else : IF exp . THEN exp ELSE exp  (57)
	if_then : IF exp . THEN exp  (58)
	comparison : exp . EQUAL_SIGN exp  (59)
	comparison : exp . NOT_EQUAL_SIGN exp  (60)
	comparison : exp . LESS_SIGN exp  (61)
	comparison : exp . LESS_EQUAL_SIGN exp  (62)
	comparison : exp . GREATER_SIGN exp  (63)
	comparison : exp . GREATER_EQUAL_SIGN exp  (64)
	boolean_operate : exp . LOGICAL_AND exp  (65)
	boolean_operate : exp . LOGICAL_OR exp  (66)

	THEN  shift 84
	LOGICAL_AND  shift 57
	LOGICAL_OR  shift 58
	EQUAL_SIGN  shift 59
	NOT_EQUAL_SIGN  shift 60
	LESS_SIGN  shift 61
	GREATER_SIGN  shift 62
	LESS_EQUAL_SIGN  shift 63
	GREATER_EQUAL_SIGN  shift 64
	ADD_SIGN  shift 65
	MINUS_SIGN  shift 66
	MULTIPLY_SIGN  shift 67
	DIVIDE_SIGN  shift 68
	.  error


state 52
	arithmetic : exp . ADD_SIGN exp  (47)
	arithmetic : exp . MINUS_SIGN exp  (48)
	arithmetic : exp . MULTIPLY_SIGN exp  (49)
	arithmetic : exp . DIVIDE_SIGN exp  (50)
	comparison : exp . EQUAL_SIGN exp  (59)
	comparison : exp . NOT_EQUAL_SIGN exp  (60)
	comparison : exp . LESS_SIGN exp  (61)
	comparison : exp . LESS_EQUAL_SIGN exp  (62)
	comparison : exp . GREATER_SIGN exp  (63)
	comparison : exp . GREATER_EQUAL_SIGN exp  (64)
	boolean_operate : exp . LOGICAL_AND exp  (65)
	boolean_operate : exp . LOGICAL_OR exp  (66)
	while : WHILE exp . DO exp  (73)

	DO  shift 85
	LOGICAL_AND  shift 57
	LOGICAL_OR  shift 58
	EQUAL_SIGN  shift 59
	NOT_EQUAL_SIGN  shift 60
	LESS_SIGN  shift 61
	GREATER_SIGN  shift 62
	LESS_EQUAL_SIGN  shift 63
	GREATER_EQUAL_SIGN  shift 64
	ADD_SIGN  shift 65
	MINUS_SIGN  shift 66
	MULTIPLY_SIGN  shift 67
	DIVIDE_SIGN  shift 68
	.  error


state 53
	for : FOR ID . ASSIGNMENT_SIGN exp TO exp DO exp  (56)

	ASSIGNMENT_SIGN  shift 86
	.  error


state 54
	no_value : LEFT_PARENTHESIS RIGHT_PARENTHESIS .  (52)

	.  reduce 52


state 55
	arithmetic : exp . ADD_SIGN exp  (47)
	arithmetic : exp . MINUS_SIGN exp  (48)
	arithmetic : exp . MULTIPLY_SIGN exp  (49)
	arithmetic : exp . DIVIDE_SIGN exp  (50)
	parentheses : LEFT_PARENTHESIS exp . RIGHT_PARENTHESIS  (51)
	sequencing : LEFT_PARENTHESIS exp . SEMICOLON exp sequencing_aux RIGHT_PARENTHESIS  (53)
	comparison : exp . EQUAL_SIGN exp  (59)
	comparison : exp . NOT_EQUAL_SIGN exp  (60)
	comparison : exp . LESS_SIGN exp  (61)
	comparison : exp . LESS_EQUAL_SIGN exp  (62)
	comparison : exp . GREATER_SIGN exp  (63)
	comparison : exp . GREATER_EQUAL_SIGN exp  (64)
	boolean_operate : exp . LOGICAL_AND exp  (65)
	boolean_operate : exp . LOGICAL_OR exp  (66)

	RIGHT_PARENTHESIS  shift 87
	SEMICOLON  shift 88
	LOGICAL_AND  shift 57
	LOGICAL_OR  shift 58
	EQUAL_SIGN  shift 59
	NOT_EQUAL_SIGN  shift 60
	LESS_SIGN  shift 61
	GREATER_SIGN  shift 62
	LESS_EQUAL_SIGN  shift 63
	GREATER_EQUAL_SIGN  shift 64
	ADD_SIGN  shift 65
	MINUS_SIGN  shift 66
	MULTIPLY_SIGN  shift 67
	DIVIDE_SIGN  shift 68
	.  error


state 56
	arithmetic : exp . ADD_SIGN exp  (47)
	arithmetic : exp . MINUS_SIGN exp  (48)
	arithmetic : exp . MULTIPLY_SIGN exp  (49)
	arithmetic : exp . DIVIDE_SIGN exp  (50)
	comparison : exp . EQUAL_SIGN exp  (59)
	comparison : exp . NOT_EQUAL_SIGN exp  (60)
	comparison : exp . LESS_SIGN exp  (61)
	comparison : exp . LESS_EQUAL_SIGN exp  (62)
	comparison : exp . GREATER_SIGN exp  (63)
	comparison : exp . GREATER_EQUAL_SIGN exp  (64)
	boolean_operate : exp . LOGICAL_AND exp  (65)
	boolean_operate : exp . LOGICAL_OR exp  (66)
	negation : MINUS_SIGN exp .  (74)

	.  reduce 74


state 57
	boolean_operate : exp LOGICAL_AND . exp  (65)

	INTEGER_LITERAL  shift 1
	ID  shift 2
	STRING_LITERAL  shift 3
	INT  shift 4
	STRING  shift 5
	NIL  shift 6
	LET  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	BREAK  shift 11
	LEFT_PARENTHESIS  shift 12
	MINUS_SIGN  shift 13
	.  error

	exp  goto 89
	build_in_type  goto 16
	l_value  goto 17
	function_call  goto 18
	nil  goto 19
	integer_literal  goto 20
	string_literal  goto 21
	array_creation  goto 22
	record_creation  goto 23
	arithmetic  goto 24
	parentheses  goto 25
	no_value  goto 26
	sequencing  goto 27
	for  goto 28
	if_then_else  goto 29
	if_then  goto 30
	comparison  goto 31
	boolean_operate  goto 32
	assignment  goto 33
	let  goto 34
	while  goto 35
	negation  goto 36
	break  goto 37


state 58
	boolean_operate : exp LOGICAL_OR . exp  (66)

	INTEGER_LITERAL  shift 1
	ID  shift 2
	STRING_LITERAL  shift 3
	INT  shift 4
	STRING  shift 5
	NIL  shift 6
	LET  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	BREAK  shift 11
	LEFT_PARENTHESIS  shift 12
	MINUS_SIGN  shift 13
	.  error

	exp  goto 90
	build_in_type  goto 16
	l_value  goto 17
	function_call  goto 18
	nil  goto 19
	integer_literal  goto 20
	string_literal  goto 21
	array_creation  goto 22
	record_creation  goto 23
	arithmetic  goto 24
	parentheses  goto 25
	no_value  goto 26
	sequencing  goto 27
	for  goto 28
	if_then_else  goto 29
	if_then  goto 30
	comparison  goto 31
	boolean_operate  goto 32
	assignment  goto 33
	let  goto 34
	while  goto 35
	negation  goto 36
	break  goto 37


state 59
	comparison : exp EQUAL_SIGN . exp  (59)

	INTEGER_LITERAL  shift 1
	ID  shift 2
	STRING_LITERAL  shift 3
	INT  shift 4
	STRING  shift 5
	NIL  shift 6
	LET  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	BREAK  shift 11
	LEFT_PARENTHESIS  shift 12
	MINUS_SIGN  shift 13
	.  error

	exp  goto 91
	build_in_type  goto 16
	l_value  goto 17
	function_call  goto 18
	nil  goto 19
	integer_literal  goto 20
	string_literal  goto 21
	array_creation  goto 22
	record_creation  goto 23
	arithmetic  goto 24
	parentheses  goto 25
	no_value  goto 26
	sequencing  goto 27
	for  goto 28
	if_then_else  goto 29
	if_then  goto 30
	comparison  goto 31
	boolean_operate  goto 32
	assignment  goto 33
	let  goto 34
	while  goto 35
	negation  goto 36
	break  goto 37


state 60
	comparison : exp NOT_EQUAL_SIGN . exp  (60)

	INTEGER_LITERAL  shift 1
	ID  shift 2
	STRING_LITERAL  shift 3
	INT  shift 4
	STRING  shift 5
	NIL  shift 6
	LET  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	BREAK  shift 11
	LEFT_PARENTHESIS  shift 12
	MINUS_SIGN  shift 13
	.  error

	exp  goto 92
	build_in_type  goto 16
	l_value  goto 17
	function_call  goto 18
	nil  goto 19
	integer_literal  goto 20
	string_literal  goto 21
	array_creation  goto 22
	record_creation  goto 23
	arithmetic  goto 24
	parentheses  goto 25
	no_value  goto 26
	sequencing  goto 27
	for  goto 28
	if_then_else  goto 29
	if_then  goto 30
	comparison  goto 31
	boolean_operate  goto 32
	assignment  goto 33
	let  goto 34
	while  goto 35
	negation  goto 36
	break  goto 37


state 61
	comparison : exp LESS_SIGN . exp  (61)

	INTEGER_LITERAL  shift 1
	ID  shift 2
	STRING_LITERAL  shift 3
	INT  shift 4
	STRING  shift 5
	NIL  shift 6
	LET  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	BREAK  shift 11
	LEFT_PARENTHESIS  shift 12
	MINUS_SIGN  shift 13
	.  error

	exp  goto 93
	build_in_type  goto 16
	l_value  goto 17
	function_call  goto 18
	nil  goto 19
	integer_literal  goto 20
	string_literal  goto 21
	array_creation  goto 22
	record_creation  goto 23
	arithmetic  goto 24
	parentheses  goto 25
	no_value  goto 26
	sequencing  goto 27
	for  goto 28
	if_then_else  goto 29
	if_then  goto 30
	comparison  goto 31
	boolean_operate  goto 32
	assignment  goto 33
	let  goto 34
	while  goto 35
	negation  goto 36
	break  goto 37


state 62
	comparison : exp GREATER_SIGN . exp  (63)

	INTEGER_LITERAL  shift 1
	ID  shift 2
	STRING_LITERAL  shift 3
	INT  shift 4
	STRING  shift 5
	NIL  shift 6
	LET  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	BREAK  shift 11
	LEFT_PARENTHESIS  shift 12
	MINUS_SIGN  shift 13
	.  error

	exp  goto 94
	build_in_type  goto 16
	l_value  goto 17
	function_call  goto 18
	nil  goto 19
	integer_literal  goto 20
	string_literal  goto 21
	array_creation  goto 22
	record_creation  goto 23
	arithmetic  goto 24
	parentheses  goto 25
	no_value  goto 26
	sequencing  goto 27
	for  goto 28
	if_then_else  goto 29
	if_then  goto 30
	comparison  goto 31
	boolean_operate  goto 32
	assignment  goto 33
	let  goto 34
	while  goto 35
	negation  goto 36
	break  goto 37


state 63
	comparison : exp LESS_EQUAL_SIGN . exp  (62)

	INTEGER_LITERAL  shift 1
	ID  shift 2
	STRING_LITERAL  shift 3
	INT  shift 4
	STRING  shift 5
	NIL  shift 6
	LET  shift 7
	IF  shift 8
	WHILE  shift 9
	FOR  shift 10
	BREAK  shift 11
	LEFT_PARENTHESIS  shift 12
	MINUS_SIGN  shift 13
	.  error

	exp  goto 95
	build_in_type  goto 16
	l_value  goto 17
	function_call  goto 18
